2008-05-04  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-manager.glade:
    * src/seahorse-revoke.c:
    * src/seahorse-sign.c:
    * src/seahorse-delete.c:
    * src/seahorse-add-uid.c:
    * src/seahorse-pgp-generate.glade:
    * src/seahorse-key-widget.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-search.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-add-subkey.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-preferences.c:
    * src/seahorse-gkeyring-item-properties.c:
    * src/seahorse-generate-select.c:
    * src/seahorse-photos.c:
    * src/main.c:
    * src/seahorse-pgp-generate.c:
    * src/seahorse-expires.c:
    * src/seahorse-ssh-upload.c:
    * src/Makefile.am:
    * src/seahorse-key-properties.c:
    * src/seahorse-add-subkey.glade:
    * INSTALL:
    * gkr/seahorse-gkeyring-item.c:
    * gkr/seahorse-gkeyring-operation.c:
    * gkr/seahorse-gkeyring-source.c:
    * configure.in:
    * pgp/seahorse-signer.c:
    * pgp/seahorse-pgp-key-op.c:
    * pgp/seahorse-server-source.c:
    * pgp/seahorse-gpg-options.c:
    * pgp/seahorse-pgp-key.c:
    * pgp/seahorse-ldap-source.c:
    * pgp/seahorse-hkp-source.c:
    * pgp/Makefile.am:
    * pgp/seahorse-pgp-operation.c:
    * pgp/seahorse-pgp-source.c:
    * ssh/seahorse-ssh-operation.c:
    * ssh/seahorse-ssh-source.c:
    * ssh/seahorse-ssh-askpass.c:
    * ssh/seahorse-ssh-key.c:
    * libseahorse/seahorse-keyserver-control.c:
    * libseahorse/seahorse-unix-signal.c:
    * libseahorse/seahorse-prefs-keyrings.c:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-transfer-operation.c:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-notification.c: