@@ -1,5 +1,6 @@
 2008-05-04  Adam Schreiber  <sadam@clemson.edu>
 
+    * src/seahorse-key-manager.c: Add window title to match desktop file.
     * src/seahorse-key-manager.glade:
     * src/seahorse-revoke.c:
     * src/seahorse-sign.c:
